# muesli

./: .gitignore  README.md  __init__.py  main.py  models.py  muesli.yaml.example  ollama_client.py  prompt.md  pyproject.toml  requirements.txt  stream_processor.py  summarizer.py  test.json.json  test_cleanup.py  whisper_wrapper.py
docs/: ARCHITECTURE.md  PRD.md
muesli/: __init__.py  main.py
muesli/core/: __init__.py  app.py  config.py  job_queue.py  models.py
muesli/llm/: __init__.py  ollama_client.py  prompt_templates.py  summarizer.py
muesli/transcription/: __init__.py  stream_processor.py  whisper_wrapper.py
muesli/ui/: __init__.py  main_window.py
muesli/ui/qml/: main.qml
scripts/: bootstrap_muesli_mac.sh
ui/: __init__.py  compile_resources.py  main_window.py  resources.qrc  resources_rc.py
ui/qml/: main.qml
