[tool.poetry]
name = "muesli"
version = "0.1.0"
description = "Offline-first, privacy-centric voice transcription and summarization desktop application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
packages = [{include = "muesli"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = "^6.5.0"
pydantic = "^2.0.0"
# Placeholder for whisper.cpp bindings - exact package to be determined
# whisper-cpp = "^0.0.0"
sqlitedict = "^2.1.0"
importlib-metadata = "^6.0.0"
pyyaml = "^6.0"
# For Ollama client
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.262"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
muesli = "muesli.main:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
