[tool.poetry]
name = "muesli"
version = "0.1.0"
description = "Offline-first, privacy-centric voice transcription and summarization desktop application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/JBlitzar/muesli"
packages = [{include = "muesli"}]

[tool.poetry.dependencies]
python = "^3.8"
pyside6 = "^6.5.0"
pyaudio = "^0.2.13"
httpx = "^0.24.0"
pydantic = "^2.0.0"
pyyaml = "^6.0"
numpy = "^1.24.0"
webrtcvad = "^2.0.10"
soundfile = "^0.12.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
mypy = "^1.3.0"
ruff = "^0.0.262"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
muesli = "muesli.main:main"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
