[project]
name = "muesli"
version = "0.1.0"
description = "Offline-first, privacy-centric voice transcription and summarization desktop application"
readme = "README.md"
repository = "https://github.com/JBlitzar/muesli"
# project is now a flat layout (top-level modules + “ui” package)
# explicitly include the UI package so Poetry has at least one package to ship
packages = [{ include = "ui" }]
requires-python = ">=3.8"
dependencies = [
    "pyside6>=6.5.0",
    "pyaudio>=0.2.13", 
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "webrtcvad>=2.0.10",
    "soundfile>=0.12.1",
    "click>=8.1.3",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0", 
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.3.0",
    "ruff>=0.0.262",
]

